Added functionality to edit Users, new folder templates for users
Added functionality to edit users. Currently logged user with role admin cannot edit himself. New templates for showing all users and edit them. Created footer. New custom.js file for dynamicaly rendering the information in the footer.

--- a/src/main/resources/templates/error-template.html
+++ b/src/main/resources/templates/error-template.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div class="logo">
-        <p>Resident Evil</p>
+        <p>Movie reservation System</p>
     </div>
     <div class="title">
         <h1>You've Failed</h1>
