--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,5 +15,7 @@
         <h3>Hello, <span sec:authentication="name"></span></h3>
     </div>
 
+    <th:block th:replace="~{fragments/footer}">
+    </th:block>
 </body>
 </html>
