--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,5 +37,7 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
+    <th:block th:replace="~{fragments/footer}">
+    </th:block>
 </body>
 </html>
