--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,10 +18,26 @@
     color: red;
 }
 
-#spider {
+.footer {
     position: absolute;
-    top: 300px;
-    left: 70px;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #900C45;
+}
+
+#footer-span {
+    color: #D3D3D3;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
 
 
