--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,5 +31,7 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
+    <th:block th:replace="~{fragments/footer}">
+    </th:block>
 </body>
 </html>
