--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-<title>Flight System</title>
+<title>Movie Reservation System</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" >
 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
