Added movie projections.
New entity for movie projections called Projection. All crud operations for that entity are available only for administrators. The projection hold information about the cinema where is going to be performed, movie, date of projection (validated with custom date validator - only dates after tommorow :+1: ), the hall of the cinema and the hours of projection intself.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -78,9 +78,10 @@ body {
 }
 
 #movie-poster img {
-    max-height: 100px;
-    min-height: 100px;
+    max-height: 100px !important;
+    min-height: 100px !important;
     max-width: 100%;
+    min-width: inherit;
 }
 
 .movie-row:hover {
