--- a/src/main/resources/templates/movies/add-movie.html
+++ b/src/main/resources/templates/movies/add-movie.html
@@ -36,9 +36,9 @@
             </div>
 
             <div class="form-group">
-                <label for="embedCode">Embed Code for Trailer</label>
-                <input type="text" th:value="${movieBinding.embedCode}" class="form-control" name="embedCode" id="embedCode" aria-describedby="embedCode" th:classappend="${#fields.hasErrors('embedCode')}? 'is-invalid'" />
-                <small style="color: red" id="embedCodeHelp" th:each="error : ${#fields.errors('embedCode')}" th:text="${error}"></small>
+                <label for="trailerUrl">Youtube Trailer Link</label>
+                <input type="text" th:value="${movieBinding.trailerUrl}" class="form-control" name="trailerUrl" id="trailerUrl" aria-describedby="trailerUrl" th:classappend="${#fields.hasErrors('trailerUrl')}? 'is-invalid'" />
+                <small style="color: red" id="embedCodeHelp" th:each="error : ${#fields.errors('trailerUrl')}" th:text="${error}"></small>
             </div>
 
             <button type="submit" class="btn btn-primary">Add Movie</button>
