Added New entity Reservation / Hot fixes Edit Projection view
Now user can make reservation for selected proejction in selected cinema.  The new view renders the current projection date, available hour to choose and the whole hall with current seats. User can choose any seat. On error the view keeps the first user choices. TODO - expose the already reserved seats....
HotFix -> when edit the same projection the application rises an error. Now when validate projection on edit mode also checks if this is the same projection.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -88,4 +88,38 @@ body {
     cursor: pointer;
 }
 
+.badge:hover {
+    font-size: 100%;
+    cursor: pointer;
+}
+
+.hour-selected {
+    background-color: green !important;
+}
+
+.d-center {
+    text-align: center;
+}
+
+.reservation-table td {
+    text-align: center;
+}
+
+.reservation-table .row-cell {
+    background-color: cornflowerblue;
+    color: white;
+}
+
+.seat-cell:hover {
+    background-color: dodgerblue;
+    color: white;
+    cursor: pointer;
+}
+
+.selected-seat {
+    background-color: seagreen !important;
+    color: white;
+    border-radius: 4px;
+}
+
 
