Now user can make a reservation and see already occupied seats.
If user is making reservation, he is able to see the reserved seats in the current hall and at the current selected hour. And he is unable to select seats in red :)

--- a/src/main/resources/templates/projections/add-projection.html
+++ b/src/main/resources/templates/projections/add-projection.html
@@ -16,7 +16,7 @@
         <form class="mt-4" th:action="@{/projections/add}" method="POST" th:object="${projectionBinding}">
             <th:block th:if="${error}">
                 <!--/*@thymesVar id="error" type="java.lang.String"*/-->
-                <h4 th:text="${error}" style="color: "></h4>
+                <h4 th:text="${error}" style="color: red"></h4>
             </th:block>
             <div class="form-group">
                 <label for="projectionDate">Release Date</label>
