--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -122,4 +122,23 @@ body {
     border-radius: 4px;
 }
 
+.seat-reserved {
+    background-color: firebrick;
+    color: white;
+    border-radius: 4px;
+}
+
+.custom-badge {
+    display: inline-block;
+    padding: .25em .4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem;
+}
+
 
