--- a/src/main/resources/templates/reservations/add-reservation.html
+++ b/src/main/resources/templates/reservations/add-reservation.html
@@ -58,8 +58,17 @@
                 <small style="color: red" th:each="error : ${#fields.errors('tickets')}" th:text="${error}"></small>
             </div>
         </div>
+
+        <div class="form-group col-md-6">
+            <label for="projectionHour"><strong></strong></label><br/>
+                    <span class="custom-badge" style="border: 1px solid cornflowerblue; color:  #292b2c">Free</span>
+                    <span class="custom-badge" style="background-color: seagreen">Selected</span>
+                    <span class="custom-badge" style="background-color: firebrick;">Reserved</span>
+            <br/>
+        </div>
+
         <div class="row">
-            <div class="col-sm-1">Row</div>
+            <div class="col-sm-1" style="text-align: center">Row</div>
             <div class="col-sm-11 text-center">Screen</div>
         </div>
         <div class="table-responsive">
