--- a/src/main/resources/templates/users/all-users.html
+++ b/src/main/resources/templates/users/all-users.html
@@ -30,7 +30,7 @@
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.email}"></td>
                 <td>
-                    <th:block th:each="role, iter: ${user.roles}">
+                    <th:block th:each="role, iter: ${user.getAuthorities()}">
                         <span th:text="${role.name}"></span>
                         <th:block th:if="${!iter.last}">,</th:block>
                     </th:block>
