Change methods for searching entities in the database
When rendering cinemas, there is no more ids in the path. All projections ara now displayed by cinema name NOT by id

--- a/src/main/resources/templates/projections/add-projection.html
+++ b/src/main/resources/templates/projections/add-projection.html
@@ -30,7 +30,7 @@
                 <select class="form-control" id="movie" name="movie">
                     <!--/*@thymesVar id="movies" type="java.util.List<org.movies.system.areas.movies.entities.Movie>"*/-->
                     <th:block th:each="movie : ${movies}">
-                        <option th:value="${movie.id}" th:text="${movie.title}" th:selected="${movie.id.equals(projectionBinding.movie)}"></option>
+                        <option th:value="${movie.title}" th:text="${movie.title}" th:selected="${movie.id.equals(projectionBinding.movie)}"></option>
                     </th:block>
                 </select>
                 <small style="color: red" id="movieHelp" th:each="error : ${#fields.errors('movie')}" th:text="${error}"></small>
